--- a/azure_content/templates/azure_content/about.html
+++ b/azure_content/templates/azure_content/about.html
@@ -5,7 +5,7 @@
   <div class="holder"> 
         <div class="shadowholder">
             <div class="subtitel2"> 
-                <div> <i class="fas fa-sticky-note"></i> This application is created by <a href="//cbi-analytics.nl"> CBI Analytics </a> </div>
+                <div> <i class="fas fa-sticky-note"></i> This application is created for <a href="/"> Power Apps Demo </a> </div>
             </div>
         </div>
     </div>
