--- a/azure_content/templates/azure_content/base.html
+++ b/azure_content/templates/azure_content/base.html
@@ -23,7 +23,7 @@
   <nav class="navbar sticky-top"> 
      <span class="open-slide">
          <a class = "Logo" href="#"> 
-            <div class = "Logo"> Our application! </div>
+            <div class = "Logo"> Power Platform (Power Apps | Power Automate | Power BI) </div>
         </a>
 
         <a id="openlogo" href="#" onclick="openSlideMenu()"> 
