--- a/azure_content/templates/azure_content/home.html
+++ b/azure_content/templates/azure_content/home.html
@@ -26,10 +26,10 @@
 
             <div class="factbox2">
                 <div class="factbox-title"> 
-                    <i class="fas fa-chart-line mr-2"></i> Channel
+                    <i class="fas fa-chart-line mr-2"></i> Power Apps
                 </div>
                 <div class="factbox-fact"> 
-                 CBI Analytics
+                 Power Apps is a suite of apps, services, connectors and data platform that provides a rapid application development environment to build custom apps for your business needs.
                 </div>
             </div>
 
